Notebook with one simple optimisation that shows generation distribution truncation

--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -5,20 +5,27 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "## Try out a simple optimisation routine with scipy's minimize function\n",
-    "Using the same model as in the previous notebook.\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "531d8192-1704-4e48-b220-4c43b257b693",
-   "metadata": {},
-   "source": [
-    "Possible next steps:\n",
-    "- Make the random walk actually a walk\n",
-    "- Fit to actual data\n",
-    "- Allow for time step other than one (possibly)"
+    "## Truncate generation times distribution\n",
+    "Here, we will truncate the generation times distribution,\n",
+    "to avoid the need always to make the calculations\n",
+    "over the full simulation period at each time step.\n",
+    "Considering all time points prior to the \n",
+    "time of interest is unlikely to be desirable\n",
+    "for longer (including real-world) analyses.\n",
+    "All functions except for `semimech` and \n",
+    "`get_gamma_densities_from_params`\n",
+    "are unchanged from the previous notebook.\n",
+    "\n",
+    "Note that I did try out the approach of\n",
+    "calculating the truncation time for the generation\n",
+    "time distribution within the model function,\n",
+    "such that it could be determined by the \n",
+    "distribution being used. However, this resulted \n",
+    "in the optimisations all going completely haywire.\n",
+    "Although I'm not quite sure why this happened,\n",
+    "this version is probably fine for our purposes\n",
+    "and allowing for adaptive truncations is probably\n",
+    "unnecessary."
    ]
   },
   {
@@ -76,6 +83,7 @@
     "\n",
     "    return Outputs(incidence, suscept, r_t)\n",
     "\n",
+    "\n",
     "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
     "    \"\"\"Get values for constructive the gamma distribution from user requested mean and standard deviation.\n",
     "    \"\"\"\n",
@@ -98,13 +106,16 @@
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, gen_times_end: int) -> tuple:\n",
     "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
-    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
-    "    process_req_exp = np.exp(np.array(process_req))\n",
-    "    process_vals = get_interp_vals_over_model_time(process_req_exp, n_times)\n",
+    "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, gen_times_end)\n",
+    "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
     "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end)\n",
     "    return model_result, process_vals\n",
     "\n",
-    "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
+    "    incidence = model_func(gen_time_mean, gen_time_sd, parameters, pop, seed, n_times)[0][0]\n",
+    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])    \n",
+    "\n",
+    "def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict, ) -> float:\n",
     "    \"\"\"Get the loss function from the model.\n",
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
@@ -126,34 +137,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37777223-4e4b-4b55-b6a0-122cf31a2ffa",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "beca7386-b374-4be0-8913-bb07b43564da",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "# Model parameters\n",
-    "population = 100.0\n",
-    "infectious_seed = 1.0\n",
-    "n_times = 40\n",
-    "max_gen_mean = 10.0\n",
-    "max_gen_sd = 4.0\n",
-    "# Calculate the longest distribution we could be interested in outside of the model function,\n",
-    "# otherwise if this is allowed to adapt to the distribution, things seem to go haywire\n",
-    "long_gen_densities = get_gamma_densities_from_params(max_gen_mean, max_gen_sd, n_times)\n",
-    "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.9999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c696b28-8b7d-4c84-92f5-58125547b9e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_params = [5.5, 1.8, 1.0, 0.5, 1.5, 0.8]\n",
-    "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times, gen_times_end)\n",
-    "test_vals = {t: d for t, d in zip(range(n_times), test_data.incidence)}"
+    "### Optimisation with above model adaptations\n",
+    "Simple, arbitrary parameters and targetsSimple, arbitrary parameters and targets"
    ]
   },
   {
@@ -163,67 +154,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Local optimisation with Nelder-Mead\n",
-    "param_bounds = [[0.1, max_gen_mean]] + [[0.1, max_gen_sd]] + [[-10.0, 10.0]] * 4\n",
-    "result = minimize(calib_func, [2.0, 1.0] + [0.5] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
+    "n_times = 40\n",
+    "infectious_seed = 1.0\n",
+    "population = 100.0\n",
+    "dummy_data = pd.Series(\n",
+    "    {\n",
+    "        5: 1.0,\n",
+    "        10: 1.0,\n",
+    "        15: 1.5,\n",
+    "        25: 4.2,\n",
+    "        30: 3.8,\n",
+    "        35: 2.1,\n",
+    "    },\n",
+    ")\n",
+    "param_bounds = [[0.0, 10.0]] * 4\n",
+    "gen_time_mean = 5.5\n",
+    "gen_time_sd = 1.7\n",
+    "max_gen_mean = 6.0\n",
+    "max_gen_sd = 2.0\n",
+    "\n",
+    "# Calculate the longest distribution we could be interested in outside of the model function,\n",
+    "# otherwise if this is allowed to adapt to the distribution, things seem to go haywire\n",
+    "long_gen_densities = get_gamma_densities_from_params(max_gen_mean, max_gen_sd, n_times)\n",
+    "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.9999)\n",
+    "\n",
+    "param_bounds = [[5.0, max_gen_mean]] + [[1.5, max_gen_sd]] + [[0.0, 10.0]] * 4\n",
+    "result = minimize(all_param_calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
-    "optimised, suscept, r_t = model_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11623a7f-f327-4f29-b41f-5eeae3b4a7e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(result.x[:2])\n",
-    "print(np.array(result.x[2:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6da9b1-f399-4d0b-83b1-aad7c0c49c32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_output_fit(test_vals, model_result, process_vals)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "857a7994-d700-4695-894c-9f20ab50257a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Global optimisation with shgo - need to capture arguments through closure due to bug in optimisation function\n",
-    "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
-    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: calib_func(x, p, s, t, d), param_bounds)\n",
-    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
-    "optimised, suscept, r_t = model_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40224487-c8c0-4d6b-a227-9888a5c7b832",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(global_result.x[:2])\n",
-    "print(np.array(global_result.x[2:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ce02ad5-9bf2-44af-a974-794e895411b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_output_fit(test_vals, model_result, process_vals)"
+    "optimised, suscept, r_t = model_result\n",
+    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals)"
    ]
   }
  ],
