Add comment about lack of success with fitting to data so far.

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -5,9 +5,9 @@
    "id": "d316eb3c-d354-439c-ad0b-e896bb350ce8",
    "metadata": {},
    "source": [
-    "## Try out a simple optimisation routine with scipy's minimize function\n",
-    "Using the same model as in the previous notebook.\n",
-    "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$"
+    "### Warning, work in progress\n",
+    "Trying to get models to actually fit to real-world\n",
+    "data, with very limited success so far."
    ]
   },
   {
@@ -17,7 +17,6 @@
    "source": [
     "Possible next steps:\n",
     "- Make the random walk actually a walk\n",
-    "- Fit to actual data\n",
     "- Allow for time step other than one (possibly)"
    ]
   },
