Extend comments to first five notebook

--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -178,14 +178,14 @@
    "id": "c78e9349-423b-4b43-9fc0-b4d2ab5c17ad",
    "metadata": {},
    "source": [
-    "Already some interesting phenomena there, \n",
+    "Already some interesting phenomena are emerging, \n",
     "in that the humps are the generations of cases from the first seeding infection,\n",
     "which progressively smooth into one-another with generations of cases.\n",
     "\n",
     "### Threshold behaviour\n",
     "Next let's check that the threshold behaviour is approximately correct.\n",
-    "We would expect a declining epidemic with $R_{0} < 1$ even without\n",
-    "susceptible depletion."
+    "We would expect a declining epidemic with $R_{0} < 1$ (even without\n",
+    "susceptible depletion implemented yet)."
    ]
   },
   {
