--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "source": [
     "## Susceptible depletion\n",
-    "Building on the previous (01basics) notebook,\n",
+    "Building on the previous (`01basics`) notebook,\n",
     "we'll now start to think about susceptible depletion.\n",
     "\n",
-    "Again, thinking about this equation in Faria, et al:\n",
+    "Again, from this equation in Faria, et al:\n",
     "$\\\\i_{s,t} = (1-\\frac{n_{s,t}}{N})R_{s,t}\\sum_{\\tau<t} i_{s,\\tau}g_{t-\\tau}$\n",
     "\n",
     "And again reducing the complexity of this by ignoring strains,\n",
@@ -76,7 +76,10 @@
    "source": [
     "### Model run\n",
     "Run the model with susceptible depletion,\n",
-    "decrementing the susceptible population by the incidence at each step."
+    "decrementing the susceptible population by the incidence at each step.\n",
+    "We'll also zero out any negative values for the susceptibles\n",
+    "that could occur if the time step is too large.\n",
+    "For reasonable parameter values, these typically seem to be very small."
    ]
   },
   {
