--- a/semimech/03vary-r.ipynb
+++ b/semimech/03vary-r.ipynb
@@ -6,15 +6,20 @@
    "metadata": {},
    "source": [
     "## Susceptible depletion and varying $R_{0}$\n",
-    "Building on the previous (02suscept-deplete) notebook,\n",
-    "we'll now start to think about susceptible depletion.\n",
+    "Building on the previous (`02suscept-deplete`) notebook,\n",
+    "we'll now look at varying the reproduction number with time,\n",
+    "because inferring the variation in this quantity is what\n",
+    "I'd like to achieve from these models.\n",
     "\n",
     "As previously, the equation we're considering will be:\n",
     "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
     "However, now the $R_{t}$ value is determined both\n",
     "by the proportion of the population remaining susceptible\n",
     "and an external \"random\" process.\n",
-    "At this stage, the process will be arbitrary values."
+    "At this stage, the process will be arbitrary values,\n",
+    "and there are several functions that could be used \n",
+    "at this stage (including a random walk and an \n",
+    "autoregressive process)."
    ]
   },
   {
@@ -40,7 +45,7 @@
    "source": [
     "### Parameters\n",
     "Set model parameters, now including the population size.\n",
-    "Also get the generation times as described previously."
+    "Also get the generation times as previously."
    ]
   },
   {
