--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -9,8 +9,9 @@
     "Using the same model as in the previous notebook,\n",
     "get an arbitrarily chosen (local) optimisation algorithm running.\n",
     "$\\\\i_t = R_t\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$\n",
-    "So that we can start using these processes in more sophisticated ways,\n",
-    "I'll begin writing the code as properly encapsulated functions."
+    "So that we can start using these various model components in more sophisticated ways,\n",
+    "I'll begin writing the code as properly encapsulated functions\n",
+    "and tracking a few key model quantities."
    ]
   },
   {
@@ -153,7 +154,10 @@
    "id": "26d42533-c135-4c09-a22f-12b64c101fe1",
    "metadata": {},
    "source": [
-    "### Local optimisation with process values only"
+    "### Local optimisation with process values only\n",
+    "Here is an optimisation algorithm applied to these dummy data.\n",
+    "It works for this simple case, but I have tried out more\n",
+    "complex data to optimise to and it quickly breaks down."
    ]
   },
   {
@@ -203,7 +207,11 @@
    "source": [
     "### Calibrate to outputs produced by model\n",
     "Check that the optimisation algorithm can recover\n",
-    "the parameters used in generating some arbitrary data."
+    "the parameters used in generating some arbitrary data.\n",
+    "This does seem a little more robust and works \n",
+    "for a broad range of parameter inputs I have\n",
+    "tried, and can find the optimimum even with quite\n",
+    "broad parameter bounds."
    ]
   },
   {
