--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -14,7 +14,9 @@
     "for longer (including real-world) analyses.\n",
     "All functions except for `semimech` and \n",
     "`get_gamma_densities_from_params`\n",
-    "are unchanged from the previous notebook.\n",
+    "are unchanged from the previous notebook, \n",
+    "other than feeding through one additional argument\n",
+    "for the number of generation times to use.\n",
     "\n",
     "Note that I did try out the approach of\n",
     "calculating the truncation time for the generation\n",
@@ -109,11 +111,7 @@
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, gen_times_end)\n",
     "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
     "    model_result = semimech(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end)\n",
-    "    return model_result, process_vals\n",
-    "\n",
-    "def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
-    "    incidence = model_func(gen_time_mean, gen_time_sd, parameters, pop, seed, n_times)[0][0]\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])    \n",
+    "    return model_result, process_vals \n",
     "\n",
     "def all_param_calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict, ) -> float:\n",
     "    \"\"\"Get the loss function from the model.\n",
@@ -176,7 +174,7 @@
     "# Calculate the longest distribution we could be interested in outside of the model function,\n",
     "# otherwise if this is allowed to adapt to the distribution, things seem to go haywire\n",
     "long_gen_densities = get_gamma_densities_from_params(max_gen_mean, max_gen_sd, n_times)\n",
-    "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.9999)\n",
+    "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.99)\n",
     "\n",
     "param_bounds = [[5.0, max_gen_mean]] + [[1.5, max_gen_sd]] + [[0.0, 10.0]] * 4\n",
     "result = minimize(all_param_calib_func, [5.0, 1.5] + [2.0] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
