--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -7,7 +7,8 @@
    "source": [
     "### Warning, work in progress\n",
     "Trying to get models to actually fit to real-world\n",
-    "data, with very limited success so far."
+    "data, with very limited success so far.\n",
+    "Here I am exponentiating the random process values."
    ]
   },
   {
@@ -138,92 +139,8 @@
     "n_times = 40\n",
     "max_gen_mean = 10.0\n",
     "max_gen_sd = 4.0\n",
-    "# Calculate the longest distribution we could be interested in outside of the model function,\n",
-    "# otherwise if this is allowed to adapt to the distribution, things seem to go haywire\n",
     "long_gen_densities = get_gamma_densities_from_params(max_gen_mean, max_gen_sd, n_times)\n",
     "gen_times_end = np.argmax(long_gen_densities.cumsum() > 0.9999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9c696b28-8b7d-4c84-92f5-58125547b9e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_params = [5.5, 1.8, 1.0, 0.5, 1.5, 0.8]\n",
-    "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times, gen_times_end)\n",
-    "test_vals = {t: d for t, d in zip(range(n_times), test_data.incidence)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d852142-63be-4a0e-80fc-22aeff302b22",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Local optimisation with Nelder-Mead\n",
-    "param_bounds = [[0.1, max_gen_mean]] + [[0.1, max_gen_sd]] + [[-10.0, 10.0]] * 4\n",
-    "result = minimize(calib_func, [2.0, 1.0] + [0.5] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, test_vals), bounds=param_bounds)\n",
-    "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
-    "optimised, suscept, r_t = model_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11623a7f-f327-4f29-b41f-5eeae3b4a7e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(result.x[:2])\n",
-    "print(np.array(result.x[2:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a6da9b1-f399-4d0b-83b1-aad7c0c49c32",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_output_fit(test_vals, model_result, process_vals, n_times)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "857a7994-d700-4695-894c-9f20ab50257a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Global optimisation with shgo - need to capture arguments through closure due to bug in optimisation function\n",
-    "# as per comment at https://stackoverflow.com/questions/72794609/scipy-issue-passing-arguments-to-optimize-shgo-function\n",
-    "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: calib_func(x, p, s, t, d), param_bounds)\n",
-    "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
-    "optimised, suscept, r_t = model_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40224487-c8c0-4d6b-a227-9888a5c7b832",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(global_result.x[:2])\n",
-    "print(np.array(global_result.x[2:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ce02ad5-9bf2-44af-a974-794e895411b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_output_fit(test_vals, model_result, process_vals, n_times)"
    ]
   },
   {
@@ -237,20 +154,7 @@
     "    gen_mean_str = f'generation time mean: {params[0]}'\n",
     "    gen_sd_str = f'generation time sd: {params[1]}'\n",
     "    process_str = 'random process vals: ' + ', '.join([str(i) for i in params[2:]])\n",
-    "    return f'{gen_mean_str} \\n{gen_sd_str} \\n{process_str}'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37b03eee-59fb-471b-bf02-b1accc49afaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Manual calibration\n",
-    "model_result, process_vals = model_func(10.0, 2.0, [0.7, 0.7, 0.7, 0.5, 0.5], 33e6, 120.0, len(mys_data), gen_times_end)\n",
-    "manual, suscept, r_t = model_result\n",
-    "plot_output_fit(mys_data, model_result, process_vals, n_times)"
+    "    return f'{gen_mean_str} \\n{gen_sd_str} \\n{process_str}'"
    ]
   },
   {
