--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -20,10 +20,16 @@
     "flow adjustment.\n",
     "\n",
     "First, ignoring strains, I'll consider:\n",
-    "$\\\\i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
+    "\n",
+    "$i_t = (1-\\frac{n_t}{N})R_t\\sum_{\\tau<t} i_{\\tau}g_{t-\\tau}$\n",
+    "\n",
+    "This is essentially the same as the equation provided by [Cori, et al.](https://academic.oup.com/aje/article/178/9/1505/89262?login=true):\n",
+    "\n",
+    "$\\mathbf{E}[I_t] = R_t\\sum_{s=1}^t I_{t-s}w_s$\n",
     "\n",
     "For now, I'll also ignore susceptible depletion and a varying reproduction number, and so consider:\n",
-    "$\\\\i_t = R_0\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$\n",
+    "\n",
+    "$i_t = R_0\\sum_{\\tau<t} i_\\tau g_{t-\\tau}$\n",
     "\n",
     "This notebook builds up the basic code from the first principles,\n",
     "checking with each extension that the results we are getting back are the same\n",
@@ -219,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
