Add comments to indexing of first notebook

--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -116,7 +116,14 @@
    "metadata": {},
    "source": [
     "### Check calculations make sense from first principles\n",
-    "Looping in Python to be completely explicit (with pre-calculated generation times)."
+    "Looping in Python to be completely explicit (with pre-calculated generation times).\n",
+    "Note that the delay is specified as `t - tau - 1` because\n",
+    "delay then starts from zero each time,\n",
+    "which then indexes the first element of the generation time densities\n",
+    "(which is indexed by zero in Python, of course).\n",
+    "As shown in the previous cell,\n",
+    "the `gen_time_densities` is the integral of the probability\n",
+    "density over each one-unit interval of the gamma distribution."
    ]
   },
   {
@@ -225,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
