Remove hard-coded parameterization

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -209,7 +209,7 @@
     "def obj_func(parameters):\n",
     "    return calib_func(parameters, pop=pop, seed=seed, n_times=n_times, targets=mys_data)\n",
     "\n",
-    "optimizer = ng.optimizers.NGOpt(parametrization=8, budget=10000)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=len(param_bounds), budget=10000)\n",
     "y = optimizer.minimize(obj_func)"
    ]
   },
