Reuse variables instead of hard code

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_result, process_vals = model_func(y.value[0], y.value[1], y.value[2:], 33e6, 120.0, len(mys_data), gen_times_end)\n",
+    "model_result, process_vals = model_func(y.value[0], y.value[1], y.value[2:], pop, seed, len(mys_data), gen_times_end)\n",
     "optimised, suscept, r_t = model_result"
    ]
   },
