Rename semimechanistic to renewal throughout notebooks

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -50,8 +50,8 @@
    "source": [
     "Outputs = namedtuple('outputs', ['incidence', 'suscept', 'r_t'])\n",
     "\n",
-    "def semimech(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end) -> Outputs:\n",
-    "    \"\"\"The semimechanistic process.\n",
+    "def renew(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end) -> Outputs:\n",
+    "    \"\"\"The renewal process.\n",
     "    \"\"\"\n",
     "    incidence = np.zeros(n_times)\n",
     "    suscept = np.zeros(n_times)\n",
@@ -97,7 +97,7 @@
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = semimech(gen_time_densities, process_vals_exp, pop, seed, n_times, gen_times_end)\n",
+    "    model_result = renew(gen_time_densities, process_vals_exp, pop, seed, n_times, gen_times_end)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
