--- a/semimech/01basics.ipynb
+++ b/semimech/01basics.ipynb
@@ -47,7 +47,9 @@
     "from scipy.stats import gamma\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "pd.options.plotting.backend = 'plotly'"
+    "pd.options.plotting.backend = 'plotly'\n",
+    "\n",
+    "from distributions import get_gamma_params_from_mean_sd"
    ]
   },
   {
@@ -92,12 +94,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}\n",
-    "\n",
     "# Generation time parameters\n",
     "req_sd = 1.5\n",
     "req_mean = 5.0\n",
@@ -232,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
