Move all distribution functions to distributino.py file

--- a/semimech/02suscept-deplete.ipynb
+++ b/semimech/02suscept-deplete.ipynb
@@ -28,7 +28,9 @@
     "from scipy.stats import gamma\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "pd.options.plotting.backend = 'plotly'"
+    "pd.options.plotting.backend = 'plotly'\n",
+    "\n",
+    "from distributions import get_gamma_params_from_mean_sd"
    ]
   },
   {
@@ -58,12 +60,6 @@
     "incidence[0] = seed\n",
     "gen_time_sd = 1.5\n",
     "gen_time_mean = 5.0\n",
-    "\n",
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}\n",
     "\n",
     "gamma_params = get_gamma_params_from_mean_sd(gen_time_mean, gen_time_sd)\n",
     "gen_time_densities = np.diff(gamma.cdf(range(n_times + 1), **gamma_params))"
