--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -44,7 +44,9 @@
     "import pandas as pd\n",
     "from plotly import graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "from scipy.optimize import minimize, shgo"
+    "from scipy.optimize import minimize, shgo\n",
+    "\n",
+    "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params"
    ]
   },
   {
@@ -77,20 +79,6 @@
     "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)  # Zero out any small negative susceptible values\n",
     "\n",
     "    return Outputs(incidence, suscept, r_t)\n",
-    "\n",
-    "def get_gamma_params_from_mean_sd(req_mean: float, req_sd: float) -> Dict[str, float]:\n",
-    "    \"\"\"Get values for constructive the gamma distribution from user requested mean and standard deviation.\n",
-    "    \"\"\"\n",
-    "    var = req_sd ** 2.0\n",
-    "    scale = var / req_mean\n",
-    "    a = req_mean / scale\n",
-    "    return {'a': a, 'scale': scale}\n",
-    "\n",
-    "def get_gamma_densities_from_params(mean: float, sd: float, n_times: int) -> np.array:\n",
-    "    \"\"\"Get integrals over integer differences in gamma distribution for simulation duration.\n",
-    "    \"\"\"\n",
-    "    params = get_gamma_params_from_mean_sd(mean, sd)\n",
-    "    return np.diff(gamma.cdf(range(n_times + 1), **params))\n",
     "\n",
     "def get_interp_vals_over_model_time(req: List[float], n_times: int) -> np.array:\n",
     "    \"\"\"Linear interpolation at requested values at regular intervals over simulation period.\n",
@@ -192,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
