Move outputs object and plotting function to .py file

--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -46,7 +46,8 @@
     "from plotly.subplots import make_subplots\n",
     "from scipy.optimize import minimize, shgo\n",
     "\n",
-    "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params"
+    "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
+    "from outputs import Outputs, plot_output_fit"
    ]
   },
   {
@@ -56,8 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Outputs = namedtuple('outputs', ['incidence', 'suscept', 'r_t'])\n",
-    "\n",
     "def renew(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end) -> Outputs:\n",
     "    \"\"\"The renewal process.\n",
     "    \"\"\"\n",
@@ -99,20 +98,7 @@
     "    \"\"\"\n",
     "    gen_time_mean, gen_time_sd, *process_req = parameters\n",
     "    incidence = model_func(gen_time_mean, gen_time_sd, process_req, pop, seed, n_times, gen_times_end)[0][0]\n",
-    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])\n",
-    "\n",
-    "def plot_output_fit(targets: Dict[int, float], result: Outputs, process_vals):\n",
-    "    \"\"\"Plot results from a fitting attempt against the target data and show estimated random process.\n",
-    "    \"\"\"\n",
-    "    fitted, suscept, r_t = result\n",
-    "    model_times = pd.Series(range(n_times))\n",
-    "    fig = make_subplots(3, 1, shared_xaxes=True, vertical_spacing=0.05, subplot_titles=['incidence', 'reproduction number', 'susceptibles'])\n",
-    "    fig.add_trace(go.Scatter(x=list(targets.keys()), y=list(targets.values()), mode='markers', name='targets'), row=1, col=1)\n",
-    "    fig.add_trace(go.Scatter(x=model_times, y=fitted, name='model'), row=1, col=1)\n",
-    "    fig.add_trace(go.Scatter(x=model_times, y=process_vals, name='transmission potential'), row=2, col=1)\n",
-    "    fig.add_trace(go.Scatter(x=model_times, y=r_t, name='Rt'), row=2, col=1)\n",
-    "    fig.add_trace(go.Scatter(x=model_times, y=suscept, name='susceptibles'), row=3, col=1)\n",
-    "    return fig.update_layout(height=800, margin={'t': 20, 'b': 5, 'l': 5, 'r': 5})"
+    "    return sum([(incidence[t] - d) ** 2 for t, d in targets.items()])"
    ]
   },
   {
@@ -160,7 +146,7 @@
     "result = minimize(calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
     "optimised, suscept, r_t = model_result\n",
-    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals)"
+    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals, n_times)"
    ]
   }
  ],
