Move single process-related function out to its own file

--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -47,6 +47,7 @@
     "from scipy.optimize import minimize, shgo\n",
     "\n",
     "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
+    "from process import get_interp_vals_over_model_time\n",
     "from outputs import Outputs, plot_output_fit"
    ]
   },
@@ -78,11 +79,6 @@
     "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)  # Zero out any small negative susceptible values\n",
     "\n",
     "    return Outputs(incidence, suscept, r_t)\n",
-    "\n",
-    "def get_interp_vals_over_model_time(req: List[float], n_times: int) -> np.array:\n",
-    "    \"\"\"Linear interpolation at requested values at regular intervals over simulation period.\n",
-    "    \"\"\"\n",
-    "    return np.interp(range(n_times), np.linspace(0.0, n_times, len(req)), req)\n",
     "\n",
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, gen_times_end: int) -> tuple:\n",
     "    \"\"\"The other epidemiological aspects of the model.\n",
