Move renewal functions to their own file and tidy notebook imports

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -30,17 +30,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List\n",
-    "from collections import namedtuple\n",
-    "from scipy.stats import gamma\n",
+    "from typing import List\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "from plotly import graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
     "from scipy.optimize import minimize, shgo\n",
+    "import nevergrad as ng\n",
     "\n",
     "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
+    "from renew import renew_trunc_gen\n",
     "from process import get_interp_vals_over_model_time\n",
     "from outputs import Outputs, plot_output_fit"
    ]
@@ -52,35 +50,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def renew(gen_time_densities, process_vals, pop, seed, n_times, gen_times_end) -> Outputs:\n",
-    "    \"\"\"The renewal process.\n",
-    "    \"\"\"\n",
-    "    incidence = np.zeros(n_times)\n",
-    "    suscept = np.zeros(n_times)\n",
-    "    r_t = np.zeros(n_times)\n",
-    "\n",
-    "    incidence[0] = seed\n",
-    "    suscept[0] = pop - seed\n",
-    "    r_t[0] = np.nan\n",
-    "        \n",
-    "    for t in range(1, n_times):\n",
-    "        gen_times_interest = min(t, gen_times_end)  # Number of generation times relevant to current loop\n",
-    "        inc_vals = incidence[t - gen_times_interest :t]  # Incidence series\n",
-    "        gen_vals = gen_time_densities[:gen_times_interest]  # Generation series\n",
-    "        contribution_by_day = inc_vals * gen_vals[::-1]  # Product of incidence values and reversed generation times\n",
-    "        r_t[t] = process_vals[t] * suscept[t - 1] / pop  # Pre-specified process by the proportion susceptible\n",
-    "        incidence[t] = contribution_by_day.sum() * r_t[t]  # Incidence for this time point\n",
-    "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)  # Zero out any small negative susceptible values\n",
-    "    \n",
-    "    return Outputs(incidence, suscept, r_t)\n",
-    "\n",
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int, gen_times_end: int) -> tuple:\n",
     "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew(gen_time_densities, process_vals_exp, pop, seed, n_times, gen_times_end)\n",
+    "    model_result = renew_trunc_gen(gen_time_densities, process_vals_exp, pop, seed, n_times, gen_times_end)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
     "def calib_func(parameters: List[float], pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
@@ -145,7 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import nevergrad as ng\n",
     "\n",
     "pop=33e6\n",
     "seed=120.0\n",
