--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -21,13 +21,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List\n",
+    "from typing import List\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.optimize import minimize, shgo\n",
     "\n",
     "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
     "from process import get_interp_vals_over_model_time\n",
+    "from renew import renew_basic\n",
     "from outputs import Outputs, plot_output_fit"
    ]
   },
@@ -38,32 +39,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def renew(gen_time_densities, process_vals, pop, seed, n_times) -> Outputs:\n",
-    "    \"\"\"The renewal process.\n",
-    "    \"\"\"\n",
-    "    incidence = np.zeros(n_times)\n",
-    "    suscept = np.zeros(n_times)\n",
-    "    r_t = np.zeros(n_times)\n",
-    "\n",
-    "    incidence[0] = seed\n",
-    "    suscept[0] = pop - seed\n",
-    "    r_t[0] = process_vals[0] * suscept[0] / pop\n",
-    "    \n",
-    "    for t in range(1, n_times):\n",
-    "        contribution_by_day = incidence[:t] * gen_time_densities[:t][::-1]  # Product of incidence values and reversed generation times\n",
-    "        r_t[t] = process_vals[t] * suscept[t - 1] / pop  # Pre-specified process by the proportion susceptible\n",
-    "        incidence[t] = contribution_by_day.sum() * r_t[t]  # Incidence\n",
-    "        suscept[t] = max(suscept[t - 1] - incidence[t], 0.0)  # Zero out any small negative susceptible values\n",
-    "        \n",
-    "    return Outputs(incidence, suscept, r_t)\n",
-    "\n",
     "def model_func(gen_time_mean: float, gen_time_sd: float, process_req: List[float], pop: int, seed: int, n_times: int) -> tuple:\n",
     "    \"\"\"The other epidemiological aspects of the model.\n",
     "    \"\"\"\n",
     "    gen_time_densities = get_gamma_densities_from_params(gen_time_mean, gen_time_sd, n_times)\n",
     "    process_vals = get_interp_vals_over_model_time(process_req, n_times)\n",
     "    process_vals_exp = np.exp(np.array(process_vals))\n",
-    "    model_result = renew(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
+    "    model_result = renew_basic(gen_time_densities, process_vals_exp, pop, seed, n_times)\n",
     "    return model_result, process_vals_exp\n",
     "\n",
     "def process_calib_func(parameters: List[float], gen_time_mean, gen_time_sd, pop: int, seed: int, n_times: int, targets: dict) -> float:\n",
