Finish off all docstrings to functions

--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -121,12 +121,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "pop=33e6\n",
-    "seed=120.0\n",
-    "\n",
     "def obj_func(parameters):\n",
-    "    return calib_func(parameters, pop=pop, seed=seed, n_times=n_times, targets=mys_data)\n",
+    "    return calib_func(parameters, pop=33e6, seed=120.0, n_times=n_times, targets=mys_data)\n",
     "\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=8, budget=10000)\n",
     "y = optimizer.minimize(obj_func)"
@@ -151,6 +147,16 @@
    "outputs": [],
    "source": [
     "print(interpret_params(y.value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e66888ff-c8a3-44d0-ad9e-b8070b72cd43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(process_vals)"
    ]
   },
   {
