Nevergrad optimisation with NGOpt to the synthetic data

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -25,6 +25,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.optimize import minimize, shgo\n",
+    "import nevergrad as ng\n",
     "\n",
     "from distributions import get_gamma_params_from_mean_sd, get_gamma_densities_from_params\n",
     "from process import get_interp_vals_over_model_time\n",
@@ -184,6 +185,52 @@
     "optimised, suscept, r_t = model_result\n",
     "print(global_result.x[:2])\n",
     "print(np.exp(np.array(global_result.x[2:])))\n",
+    "plot_output_fit(test_vals, model_result, process_vals, n_times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d57a58a-c84f-4ccf-8baf-b79c4304176b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def obj_func(parameters):\n",
+    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
+    "\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
+    "ng_result = optimizer.minimize(obj_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b12e4bc6-10fd-45fd-89e7-3101c1765ff5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_result, process_vals = model_func(ng_result.value[0], ng_result.value[1], ng_result.value[2:], 1e2, 1.0, len(test_vals))\n",
+    "optimised, suscept, r_t = model_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "828816cf-1be7-4e9b-934b-7c7d8525dfe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(ng_result.value)\n",
+    "print(np.exp(ng_result.value[2:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "410c2e5b-b9e1-465d-b1d5-10fbc07526e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_output_fit(test_vals, model_result, process_vals, n_times)"
    ]
   }
