Optimise to jittered synthetic data from model in 04 notebook

--- a/semimech/04optimise.ipynb
+++ b/semimech/04optimise.ipynb
@@ -24,6 +24,7 @@
     "from typing import List\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "pd.options.plotting.backend = 'plotly'\n",
     "from scipy.optimize import minimize, shgo\n",
     "import nevergrad as ng\n",
     "\n",
@@ -98,9 +99,8 @@
    "metadata": {},
    "source": [
     "### Local optimisation with process values only\n",
-    "Here is an optimisation algorithm applied to these dummy data.\n",
-    "It works for this simple case, but I have tried out more\n",
-    "complex data to optimise to and it quickly breaks down."
+    "Optimisation algorithm applied to arbitrary dummy data.\n",
+    "It works for this simple case, but quickly breaks down for more complex data."
    ]
   },
   {
@@ -116,7 +116,7 @@
     "result = minimize(process_calib_func, [np.log(2.0)] * 4, method='Nelder-Mead', args=(gen_time_mean, gen_time_sd, population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(gen_time_mean, gen_time_sd, result.x, population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
-    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals, n_times)"
+    "plot_output_fit(dummy_data, model_result, process_vals, n_times)"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "result = minimize(all_param_calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
-    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals, n_times)"
+    "plot_output_fit(dummy_data, model_result, process_vals, n_times)"
    ]
   },
   {
@@ -150,11 +150,7 @@
    "source": [
     "### Calibrate to outputs produced by model\n",
     "Check that the optimisation algorithm can recover\n",
-    "the parameters used in generating some arbitrary data.\n",
-    "This does seem a little more robust and works \n",
-    "for a broad range of parameter inputs I have\n",
-    "tried, and can find the optimimum even with quite\n",
-    "broad parameter bounds."
+    "the parameters used in generating some arbitrary data."
    ]
   },
   {
@@ -165,9 +161,9 @@
    "outputs": [],
    "source": [
     "model_times = pd.Series(range(n_times))\n",
-    "test_params = [5.5, 1.8, np.log(1.8), np.log(2.5), np.log(1.6), np.log(0.7)]\n",
-    "test_data, _ = model_func(test_params[0], test_params[1], test_params[2:], population, infectious_seed, n_times)\n",
-    "test_vals = {t: d for t, d in zip(model_times, test_data.incidence)}"
+    "test_process = [1.8, 2.5, 1.6, 0.7]\n",
+    "test_data, _ = model_func(5.5, 1.8, np.log(test_process), population, infectious_seed, n_times)\n",
+    "test_vals = pd.Series(test_data.incidence, index=model_times)"
    ]
   },
   {
@@ -183,9 +179,18 @@
     "global_result = shgo(lambda x, p=population, s=infectious_seed, t=n_times, d=test_vals: all_param_calib_func(x, p, s, t, d), param_bounds)\n",
     "model_result, process_vals = model_func(global_result.x[0], global_result.x[1], global_result.x[2:], population, infectious_seed, n_times)\n",
     "optimised, suscept, r_t = model_result\n",
-    "print(global_result.x[:2])\n",
+    "print(test_process)\n",
     "print(np.exp(np.array(global_result.x[2:])))\n",
     "plot_output_fit(test_vals, model_result, process_vals, n_times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "090d2941-b31f-4b2f-a463-72db3a705323",
+   "metadata": {},
+   "source": [
+    "### Nevergrad optimisation with synthetic data\n",
+    "Use NGOpt to optimise directly to the outputs from the model with known parameters."
    ]
   },
   {
@@ -197,41 +202,43 @@
    "source": [
     "def obj_func(parameters):\n",
     "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=test_vals)\n",
-    "\n",
     "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
-    "ng_result = optimizer.minimize(obj_func)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b12e4bc6-10fd-45fd-89e7-3101c1765ff5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "ng_result = optimizer.minimize(obj_func)\n",
     "model_result, process_vals = model_func(ng_result.value[0], ng_result.value[1], ng_result.value[2:], 1e2, 1.0, len(test_vals))\n",
-    "optimised, suscept, r_t = model_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "828816cf-1be7-4e9b-934b-7c7d8525dfe7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(ng_result.value)\n",
-    "print(np.exp(ng_result.value[2:]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "410c2e5b-b9e1-465d-b1d5-10fbc07526e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "optimised, suscept, r_t = model_result\n",
+    "print(test_process)\n",
+    "print(np.exp(ng_result.value[2:]))\n",
     "plot_output_fit(test_vals, model_result, process_vals, n_times)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbf2d766-f91b-4878-80ad-6d4ccb0f248c",
+   "metadata": {},
+   "source": [
+    "### Nevergrad optimisation with jittered synthetic data\n",
+    "NGOpt against synthetic data with jitter applied."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87da5ad0-cea0-4cfe-8910-2bce6105b747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spread = 0.2\n",
+    "jitter = pd.Series(np.random.normal(scale=spread, size=n_times) + 1.0)\n",
+    "jittered_vals = test_vals * jitter\n",
+    "def obj_func(parameters):\n",
+    "    return all_param_calib_func(parameters, pop=1e2, seed=1.0, n_times=n_times, targets=jittered_vals)\n",
+    "optimizer = ng.optimizers.NGOpt(parametrization=6, budget=10000)\n",
+    "ng_result = optimizer.minimize(obj_func)\n",
+    "jittered_result, process_vals = model_func(ng_result.value[0], ng_result.value[1], ng_result.value[2:], 1e2, 1.0, len(test_vals))\n",
+    "optimised, suscept, r_t = jittered_result\n",
+    "print(test_process)\n",
+    "print(np.exp(ng_result.value[2:]))\n",
+    "plot_output_fit(jittered_vals, jittered_result, process_vals, n_times)"
    ]
   }
  ],
