--- a/semimech/05truncate-generation-dist.ipynb
+++ b/semimech/05truncate-generation-dist.ipynb
@@ -117,7 +117,7 @@
     "result = minimize(calib_func, [5.0, 1.5] + [np.log(2.0)] * 4, method='Nelder-Mead', args=(population, infectious_seed, n_times, dummy_data), bounds=param_bounds)\n",
     "model_result, process_vals = model_func(result.x[0], result.x[1], result.x[2:], population, infectious_seed, n_times, gen_times_end)\n",
     "optimised, suscept, r_t = model_result\n",
-    "plot_output_fit(dummy_data.to_dict(), model_result, process_vals, n_times)"
+    "plot_output_fit(dummy_data, model_result, process_vals, n_times)"
    ]
   }
  ],
