--- a/semimech/06apply-to-data.ipynb
+++ b/semimech/06apply-to-data.ipynb
@@ -107,11 +107,11 @@
    "source": [
     "raw_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)['MYS']\n",
     "raw_data.index = pd.to_datetime(raw_data.index)\n",
-    "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS'].to_dict()\n",
+    "mys_data = raw_data.loc[datetime(2021, 3, 1): datetime(2021, 11, 1)].reset_index()['MYS']\n",
     "n_times = len(mys_data)\n",
     "\n",
     "# Scale up notifications to incidence outside of model\n",
-    "mys_data = {k: v * 16 for k, v in mys_data.items()}"
+    "mys_data *= 16"
    ]
   },
   {
